feat: response ref params removed from all routes at swagger comments
